tests/files/type_checker_tests/should_pass/359.cmdr
//Test multidimensional arrays type check
x = [[[[[1,2]]]]];
a = x[0];
b = x[0][0];
c = x[0][0][0];
d = x[0][0][0][0];
e = x[0][0][0][0][0];