tests/files/type_checker_tests/should_fail/210.cmdr
//Test indexing too much from multidimensional array
x = [[[[[1,2]]]]];
a = x[0][0][0][0][0][0]; //This should not be possible since it would be indexing an integer